--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ggez = "0.6.1"
+mint = "^0.5.6"
+ggez = "^0.6.1"
+# nalgebra = { version = "^0.29", features = ["convert-mint"] }
