--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2018"
 [dependencies]
 mint = "^0.5.6"
 ggez = "^0.6.1"
-# nalgebra = { version = "^0.29", features = ["convert-mint"] }
+
+# text to speech
+# tts = "^0.20"
