--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,11 @@ edition = "2018"
 mint = "^0.5.6"
 ggez = "^0.6.1"
 
-# text to speech
-# tts = "^0.20"
+# for handling coordinates
+dms-coordinates = { path = "lib/dms-coordinates" }
 
 # Sim integration
 msfs = "^0.1.0"
 
-# for handling coordinates
-dms-coordinates = "^1.1"
+# text to speech
+# tts = "^0.20"
