--- a/lib/dms-coordinates/Cargo.toml
+++ b/lib/dms-coordinates/Cargo.toml
@@ -13,14 +13,7 @@ readme = "README.md"
 [features]
 
 [dependencies]
-regex = "1"
-map_3d = "0.1.4" 
-rust-3d = "0.34.0"
 thiserror = "1"
-num-integer = "0.1.45"
-gpx = { version = "0.8.1", optional = true, default-features = false }
-serde = { version = "1.0.138", optional = true, default-features = false, features = ["derive"] }
-serde_derive = { version = "1", optional = true }
 
-[dev-dependencies]
+[test-dependencies]
 assert_float_eq = "1.1.3"
