--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ ggez = "^0.6.1"
 geographiclib-rs = "^0.2.1"
 
 # Sim integration
-msfs = "^0.1.0"
+# msfs = "^0.1.0"
+msfs = { path = "lib/msfs-rs/msfs" }
 
 # Text to speech, TODO: find better crate
 # tts = "^0.20"
